Bullet Types and display

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,24 +1,24 @@
 content.effect_UNUSED.name = 伤害类型
 
-damage.kinetic.name = 动能
+damage.kinetic.name = [#ebb778]动能伤害[]
 damage.kinetic.description = 使用动能冲击对敌人进行有效损伤。
 damage.kinetic.details = 原始，简单，但高效。
-damage.explosive.name = 爆破
+damage.explosive.name = [#f98f4a]爆破冲击[]
 damage.explosive.description = 定点爆破。对大多数敌人相当有效。
 damage.explosive.details = 爆炸就是艺术
-damage.pierce.name = 穿透
+damage.pierce.name = [#e2f5fb]穿刺破坏[]
 damage.pierce.description = 锐化攻击。粉碎敌人的护甲以进行有效穿透。
 damage.pierce.details = 枪枪爆头，好运连连
-damage.energy.name = 能量
+damage.energy.name = [#5f97eb]能量损伤[]
 damage.energy.description = 纯粹能量形式的攻击。对特定敌人有奇效。
 damage.energy.details = 十 万 伏 特
-damage.thermal.name = 热能
+damage.thermal.name = [#e34047]热能烧灼[]
 damage.thermal.description = 纯粹热能。融化一切无法抵御高热的敌人。
 damage.thermal.details = 温 暖 你 我 他
-damage.cryogenic.name = 冰冻
+damage.cryogenic.name = [#74c2e8]低温冻结[]
 damage.cryogenic.description = 以低温冻结不能抵御寒冷的敌人。
 damage.cryogenic.details = 恶 语 伤 人 六 月 寒
-damage.radiation.name = 辐射
+damage.radiation.name = [#bcff73]辐射摧残[]
 damage.radiation.description = 高辐射源。以恶毒的方式摧毁敌人。
 damage.radiation.details = 生 在 辐 中 不 知 辐
 
