--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -37,3 +37,5 @@ planet.exogenesis-axin.description = sector.
 
 exo.damage-resistance = [red]{0}% 伤害抗性[]
 exo.damage-weakness = [accent]{0}% 伤害弱性[]
+exo.damage-resistance-unit = [accent]{0}% 伤害抗性[]
+exo.damage-weakness-unit = [red]{0}% 伤害弱性[]
