bundle improvement and outline

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,26 +1,29 @@
 content.effect_UNUSED.name = 伤害类型
 
 damage.kinetic.name = [#ebb778]动能伤害[]
-damage.kinetic.description = 使用动能冲击对敌人进行有效损伤。
-damage.kinetic.details = 原始，简单，但高效。
+damage.kinetic.description = 由大多数弹药造成的常见伤害类型。可被装甲单位（例如突击型单位）有效抵御。
+#damage.kinetic.details = 原始，简单，但高效。
 damage.explosive.name = [#f98f4a]爆破冲击[]
-damage.explosive.description = 定点爆破。对大多数敌人相当有效。
-damage.explosive.details = 爆炸就是艺术
+damage.explosive.description = 通常由范围弹药造成的伤害类型。对具有抗穿透装甲的单位（例如某些突击型单位）最有效。
+#damage.explosive.details = 爆炸就是艺术
 damage.pierce.name = [#e2f5fb]穿刺破坏[]
-damage.pierce.description = 锐化攻击。粉碎敌人的护甲以进行有效穿透。
-damage.pierce.details = 枪枪爆头，好运连连
+damage.pierce.description = 由特种子弹造成的伤害类型，其设计旨在快速、精准地针对单一目标。装备有防爆装甲的单位通常更具备较弱的穿刺抗性。
+#damage.pierce.details = 枪枪爆头，好运连连
 damage.energy.name = [#5f97eb]能量损伤[]
-damage.energy.description = 纯粹能量形式的攻击。对特定敌人有奇效。
-damage.energy.details = 十 万 伏 特
+damage.energy.description = 由能量炮塔造成的常见伤害类型。通常对具有动能抗性的单位有效。
+##damage.energy.details = 十 万 伏 特
 damage.thermal.name = [#e34047]热能烧灼[]
-damage.thermal.description = 纯粹热能。融化一切无法抵御高热的敌人。
-damage.thermal.details = 温 暖 你 我 他
+damage.thermal.description = 由高温造成的伤害类型，利用热量造成伤害。通常对具有抗低温能力或轻型装甲的单位有效。
+#damage.thermal.details = 温 暖 你 我 他
 damage.cryogenic.name = [#74c2e8]低温冻结[]
-damage.cryogenic.description = 以低温冻结不能抵御寒冷的敌人。
-damage.cryogenic.details = 恶 语 伤 人 六 月 寒
+damage.cryogenic.description = 由低温造成的伤害类型，利用低温削弱其结构和内部结构。通常对具有热抗性或轻型装甲的单位有效。
+#damage.cryogenic.details = 恶 语 伤 人 六 月 寒
 damage.radiation.name = [#bcff73]辐射摧残[]
-damage.radiation.description = 高辐射源。以恶毒的方式摧毁敌人。
-damage.radiation.details = 生 在 辐 中 不 知 辐
+damage.radiation.description = 由高能辐射造成的伤害类型，对具有抵抗物理伤害类型（例如动能、穿刺和爆炸）的单位有效。
+#damage.radiation.details = 生 在 辐 中 不 知 辐
+damage.graviton.name = [#6657ae]重力坍缩[]
+damage.graviton.description = 由重力操纵造成的伤害类型，对具有例如能量、热能和低温抗性的单位有效。
+#damage.graviton.details =
 
 stat.resistance = 抗性列表
 
